[project]
name = "tiledb-cloud"
description = "TileDB Cloud platform Python client"
readme = "./README.md"
dynamic = ["version"]

dependencies = [
  "attrs>=21.4.0",
  "certifi",
  "cloudpickle>=1.4.1",
  "packaging",
  "pandas>=1.2.4,<2",
  "pyarrow>=3.0.0",
  "python-dateutil",
  "six>=1.10",
  "tiledb>=0.15.2",
  "urllib3>=1.26",
]

[project.optional-dependencies]
viz-tiledb = ["networkx>=2", "pydot", "tiledb-plot-widget>=0.1.7"]
viz-plotly = ["networkx>=2", "plotly>=4", "pydot"]
all = ["networkx>=2", "plotly>=4", "pydot", "tiledb-plot-widget>=0.1.7"]

[project.urls]
homepage = "https://tiledb.com"
repository = "https://github.com/TileDB-Inc/TileDB-Cloud-Py"


[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/tiledb/cloud/version.py"
