[project]
name = "tiledb-cloud"
description = "TileDB Cloud platform Python client"
readme = "./README.md"
dynamic = ["version"]
requires-python = ">=3.8"

dependencies = [
    "attrs>=21.4.0",
    "certifi",
    "cloudpickle>=1.4.1,<3",
    "importlib-metadata",
    "packaging",
    "pandas>=1.2.4",
    "pyarrow>=3.0.0",
    "python-dateutil",
    "six>=1.10",
    # Not directly used on the client, but some server-side environments have
    # tblib transitively enabled, so this is needed for unpickling.
    "tblib~=1.7",
    "tiledb>=0.15.2",
    "typing-extensions",
    "urllib3>=1.26",
]

[project.optional-dependencies]
viz-tiledb = ["networkx>=2", "pydot", "tiledb-plot-widget>=0.1.7"]
viz-plotly = ["networkx>=2", "plotly>=4", "pydot"]
all = ["networkx>=2", "plotly>=4", "pydot", "tiledb-plot-widget>=0.1.7"]

dev = ["black", "pytest", "ruff"]
tests = ["xarray", "pytest-split"]

[project.urls]
homepage = "https://tiledb.com"
repository = "https://github.com/TileDB-Inc/TileDB-Cloud-Py"


[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6"]

[tool.pytest.ini_options]
explicit-only = ["geospatial"]
markers = [
  "geospatial: tests that require the geospatial libraries",
]
norecursedirs = ["tiledb/cloud"]


[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/tiledb/cloud/version.py"

[tool.ruff]
extend-select = ["I"]

[tool.ruff.isort]
known-first-party = ["tiledb"]
force-single-line = true
single-line-exclusions = ["typing", "typing_extensions"]

[tool.ruff.per-file-ignores]
# Generated files have long line lengths.
"src/tiledb/cloud/_common/api_v2/*" = ["E501"]
"src/tiledb/cloud/rest_api/*" = ["E501"]
# This file includes generated Python 2 code with `long`.
"src/tiledb/cloud/rest_api/rest.py" = ["F821"]

# Certain tests have long JSON strings and deep structures.
"tests/taskgraphs/test_builder.py" = ["E501"]
